@@ -1,6 +1,11 @@
 2006-05-26  Gabor Csardi  <csardi@kzoo.edu>
 
-	* interfaces/R/igraph/R (print.igraph.vs, print.igraph.es) : added
+	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
+	(print.igraph.es) : added
+
+	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
+	indexing based on attributes a'le GUESS
+	* interfaces/R/igraph/R/iterators.R (%--%, %->%, %<-%) : added
 
 2006-05-25  Gabor Csardi  <csardi@kzoo.edu>
 
